Remove water supply handler
